<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    app:cardCornerRadius="10dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_rate"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_rate"/>

            <TextView
                android:fontFamily="@font/amaranth_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_us"
                android:textSize="18sp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_share"/>

            <TextView
                android:fontFamily="@font/amaranth_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_your_friends"
                android:textSize="18sp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_otherApps"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_moreapp"/>

            <TextView
                android:fontFamily="@font/amaranth_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_other_pp"
                android:textSize="18sp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_policy"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_policy"/>

            <TextView
                android:fontFamily="@font/amaranth_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textSize="18sp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <View
            android:background="#3B3C3C"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="1px"/>

        <LinearLayout
            android:id="@+id/ll_use"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_usedemo"/>

            <TextView
                android:fontFamily="@font/amaranth_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_use"
                android:textSize="18sp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_demo"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_videodemo"/>

            <TextView
                android:fontFamily="@font/amaranth_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_video"
                android:textSize="18sp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_notWorking"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_usedemo"/>

            <TextView
                android:fontFamily="@font/amaranth_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_not_working"
                android:textSize="18sp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <View
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#3B3C3C"
            android:layout_width="match_parent"
            android:layout_height="1px"/>

        <LinearLayout
            android:id="@+id/ll_feedback"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_feedback"/>

            <TextView

                android:fontFamily="@font/amaranth_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:textSize="18sp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>

